# build and installation instructions for woodnet
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hausdorff"
version = "0.1.2"
authors = [
  { name="Jannik Stebani", email="jannik.stebani@uni-wuerzburg.de" },
]
description = "Compute the Hausdorff distance for numpy and cupy arrays."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta"
]
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = [
    "deep learning", "wood science", "volumetric", "classification",
    "image processing", "machine learning", "data processing"
]
dependencies = [
    "numpy>=1.20.0",
    "numba>=0.50.0",
    "scikit-image",
]

[project.optional-dependencies]
dev = ["pytest", "matplotlib", "ruff"]
cuda = ["cupy>=9.3.0"]

[project.urls]
Homepage = "https://github.com/stebix/hausdorff"
Issues = "https://github.com/stebix/hausdorff/issues"

[tool.ruff]
line-length = 99
indent-width = 4